--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ nav {
 }
 
 .nav-link {
+  font-family: "Times New Roman", "Times", "Arial", sans-serif;
   font-size: 18px;
   font-weight: bold;
   transition: border-bottom ease-in-out 0.2s;
@@ -119,3 +120,70 @@ nav {
 }
 
 /* END 404 */
+
+/* START ENTER */
+
+#enter {
+  font-family: "Roboto", "Arial", sans-serif;
+  width: 50%;
+  margin: auto;
+}
+
+#enter h2 {
+  font-size: 28px;
+  max-width: fit-content;
+  margin: 15px auto;
+}
+
+#enter a {
+  color: blue;
+  text-decoration: underline;
+}
+
+#enter form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#enter form div {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+}
+
+#enter form p {
+  margin: 0;
+  font-size: 12px;
+  color: #444444;
+}
+
+#enter input[type="text"],
+#enter input[type="email"],
+#enter input[type="password"] {
+  width: 100%;
+  margin-top: 5px;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+#enter input[type="submit"] {
+  display: block;
+  font-size: 18px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  padding: 5px 30px;
+  max-width: fit-content;
+  margin: 30px auto;
+  transition: all ease-in-out 0.1s;
+}
+
+#enter input[type="submit"]:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+/* END ENTER */
