--- a/css/style.css
+++ b/css/style.css
@@ -262,3 +262,44 @@ nav {
 }
 
 /* END PUBLISH */
+
+/* START PROFILE */
+
+#profile {
+  font-family: "Roboto", "Arial", sans-serif;
+  width: 85%;
+  margin: auto;
+}
+
+#profile .article-small {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  gap: 10px;
+}
+
+#profile .article-small img {
+  width: 25%;
+}
+
+#profile .article-small-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#profile .article-link {
+  display: block;
+  width: 100%;
+  margin: 10px auto;
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  /* padding: 10px; */
+  /* border: 1px solid black; */
+  /* transition: all ease-in-out 0.1s; */
+}
+
+/* END PROFILE */
