--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ a {
   color: inherit;
 }
 
-li {
+ul,
+ol {
   list-style: none;
 }
 
@@ -200,6 +201,11 @@ nav {
   font-family: "Roboto", "Arial", sans-serif;
   width: 75%;
   margin: auto;
+}
+
+#publish a {
+  text-decoration: underline;
+  color: inherit;
 }
 
 #publish h2 {
