--- a/css/style.css
+++ b/css/style.css
@@ -411,4 +411,22 @@ nav {
   font-family: "Roboto", "Arial", sans-serif;
 }
 
+#article .title {
+  font-size: 36px;
+  margin-bottom: 0px;
+}
+
+#article .author-wrapper {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: light;
+  margin-bottom: 2em;
+}
+
+#article .author {
+  font-style: normal;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 /* END ARTICLE */
