--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,22 @@ nav {
   margin: auto;
 }
 
+#profile h2 {
+  margin: 15px auto;
+}
+
+#profile .info-wrapper {
+  margin-bottom: 2em;
+}
+
+#profile .info-wrapper * {
+  margin: 0.5em 0;
+}
+
+#profile .info-wrapper .info {
+  font-weight: bold;
+}
+
 #profile .article-small {
   border: 1px solid black;
   border-radius: 5px;
