create workspace in order to create small migrate_data binary to deal with data conversion betweem versions. Also make all articles require approval before being published.

--- a/server/css/style.css
+++ b/server/css/style.css
@@ -463,6 +463,12 @@ nav {
   margin: 2em 0;
 }
 
+#admin form select {
+  font-size: inherit;
+  border-radius: 0;
+  padding: 0.2em;
+}
+
 #admin #results {
   display: flex;
   flex-direction: column;
