add editor ability

--- a/server/css/style.css
+++ b/server/css/style.css
@@ -520,3 +520,11 @@ nav {
 }
 
 /* END ADMIN */
+
+/* START EDITOR */
+
+#editor {
+  font-family: "Roboto", "Arial", sans-serif;
+}
+
+/* END EDITOR */
